--- a/app/templates/components/product-tile.hbs
+++ b/app/templates/components/product-tile.hbs
@@ -2,4 +2,4 @@
 {{product.name}} for ${{product.price}}
 
 <button {{action 'addToCart' product}}>Add to Cart</button>
-<button {{action 'removeFromCart' product}}>Remove All {{product.name}}</button>
+<button {{action 'removeFromCart' product}}>Remove</button>
