add parallax effect

--- a/app/templates/components/display-cart.hbs
+++ b/app/templates/components/display-cart.hbs
@@ -1,10 +1,24 @@
 {{yield}}
-{{#if shoppingCart.items}}
-  <h1>Current Items in Cart</h1>
-  <button {{action 'emptyCart'}}>Empty Cart</button>
-  {{#each shoppingCart.items as |item|}}
-  <h5>{{item.name}} -- {{item.price}}</h5>
-  {{/each}}
-{{else}}
-  <h1>Your Cart is Empty</h1>
-{{/if}}
+<div class="container">
+  {{#if shoppingCart.items}}
+    <h1>Current Items in Cart</h1>
+    <button class="btn btn-danger" {{action 'emptyCart'}}>Empty Cart</button>
+    {{#each shoppingCart.items as |item|}}
+    <div class="cart-product">
+      <div class="row">
+        <div class="col-xs-8">
+          <span class="name">{{item.name}}</span>
+        </div>
+        <div class="col-xs-4">
+          <span class="price">${{item.price}}</span>
+        </div>
+      </div>
+      <div class="row">
+        <button class="btn btn-danger" {{action 'removeFromCart' item}}>Remove</button>
+      </div>
+    </div>
+    {{/each}}
+  {{else}}
+    <h1>Your Cart is Empty</h1>
+  {{/if}}
+</div>
